--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,108 @@
-.App {
-  text-align: center;
+:root {
+  --body-color: #F6F8F9;
+  --primary-color: #010935;
+  --primary-hover-color: #06087e;
+  --bg-color: #071c55;
+  --box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.7);
+  --white-color: rgb(255, 255, 255);
+  --black-color: black;
+  --dullBlack-color: rgb(66, 66, 66);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.app{
+  overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.theme-color {
+  height: 100vh;
+  background-color: var(--body-color);
+}
+.center{
+  width: 90%;
+  margin: 0 auto !important;
+}
+.dashboard-main {
+  width: 90%;
+  margin: 0 auto !important;
+}
+
+.orange-gradient {
+  background: #ff512f; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ff512f,
+    #f09819
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ff512f,
+    #f09819
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.white-bg{
+  background-color: var(--white-color);
+}
+.card {
+  outline: none;
+  border: none !important;
+  height: 250px;
+  margin-bottom: 10%;
+}
+.whole-form{
+  width: 60%;
+  margin: 5% auto;
+}
+input, select, textarea{
+  border-color: var(--black-color)!important;
+}
+
+/* .....................SEARCH FUNCTIONALITY....................... */
+
+.search {
+  width: 100%;
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00B4CC;
+  border-right: none;
+  padding: 5px;
+  height: 50px;
+  border-radius: 5px 0 0 5px;
+  border: 2px solid black;
+  outline: none;
+  color: #9DBFAF;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 70px;
+  height: 50px;
+  border: none;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+.profile-single{
+  margin-top: 70%;
+  margin-bottom: 70%;
 }
